--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,56 +1,66 @@
 <Window x:Class="PsConsoleLauncher.views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Console Menu" Height="450" Width="800"
+        Title="Console Menu" Height="1080" Width="1920"
         Background="Black"
         WindowStartupLocation="CenterScreen">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <!-- This is how you potentially can use the attributes -->
         <!--
             See https://learn.microsoft.com/en-us/dotnet/api/system.windows.controls.contentcontrol.contenttemplate
             to create a DataTemplate for each item in the list and bind it to the properties of your data model.
         -->
-        <StackPanel x:Name='TileItemsControl' Grid.Row="0" Margin="20,10" VerticalAlignment="Center">
-                <TextBlock x:Name="DetailTitle" Foreground="White" FontSize="24" FontWeight="Bold" Text="Title" HorizontalAlignment="Center"/>
-                <TextBlock x:Name="DetailPlatform" Foreground="Gray" FontSize="16" Text="Platform" HorizontalAlignment="Center"/>
-                <TextBlock x:Name="DetailPath" Foreground="Gray" FontSize="12" Text="Path" HorizontalAlignment="Center" TextTrimming="CharacterEllipsis"/>
-        </StackPanel>
+
         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto"
                   VerticalScrollBarVisibility="Disabled"
-                  Background="Black">
-            <StackPanel Orientation="Horizontal" Margin="20">
+                  Background="Black" Grid.ColumnSpan="2" Margin="0,0,0,-1" Grid.RowSpan="2" RenderTransformOrigin="0.539,0.502">
+            <StackPanel Orientation="Horizontal" Margin="20" RenderTransformOrigin="0.5,0.5" Height="692" Width="1312">
+                <StackPanel.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform AngleY="-0.179" AngleX="0.001"/>
+                        <RotateTransform Angle="-0.106"/>
+                        <TranslateTransform Y="200" X="-2"/>
+                    </TransformGroup>
+                </StackPanel.RenderTransform>
 
                 <!-- Example App Block -->
-                <Button Width="150" Height="200" Margin="10"
+                <Button Width="200" Height="200" Margin="10"
                     Background="DarkSlateBlue" Foreground="White"
                     FontSize="16" FontWeight="Bold"
                     Content="App 1"/>
 
-                <Button Width="150" Height="200" Margin="10"
+                <Button Width="200" Height="200" Margin="10"
                     Background="DarkGreen" Foreground="White"
                     FontSize="16" FontWeight="Bold"
                     Content="App 2"/>
 
-                <Button Width="150" Height="200" Margin="10"
+                <Button Width="200" Height="200" Margin="10"
                     Background="DarkRed" Foreground="White"
                     FontSize="16" FontWeight="Bold"
                     Content="App 3"/>
 
-                <Button Width="150" Height="200" Margin="10"
+                <Button Width="200" Height="200" Margin="10"
                     Background="DarkOrange" Foreground="White"
                     FontSize="16" FontWeight="Bold"
                     Content="App 4"/>
 
-                <Button Width="150" Height="200" Margin="10"
+                <Button Width="200" Height="200" Margin="10"
                     Background="DarkCyan" Foreground="White"
                     FontSize="16" FontWeight="Bold"
                     Content="App 5"/>
             </StackPanel>
-    </ScrollViewer>
+        </ScrollViewer>
     </Grid>
 </Window>
+<!--Be sure wrap every to this screen: animations, music, cursor, games. Also, top row with game library and settings icons. time and date will also be included. -->
+<!--Remember this isn't your "Main window", just the ps4 base. the XMB and others consoles have to be recreated-->
