--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -32,7 +32,13 @@
                         <TranslateTransform Y="200" X="-2"/>
                     </TransformGroup>
                 </StackPanel.RenderTransform>
-
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Image Source="{Binding CurrentGame.IconPath}" Width="205" Height="205"/>
+                    <TextBlock Text="{Binding CurrentGame.Name}" 
+                       HorizontalAlignment="Center" 
+                       FontSize="24" 
+                       Margin="0,10,0,0"/>
+                </StackPanel>
                 <!-- Example App Block -->
                 <Button Width="200" Height="200" Margin="10"
                     Background="DarkSlateBlue" Foreground="White"
